--- a/examples/clangy-bird/resources/ui/views/main_menu.xml
+++ b/examples/clangy-bird/resources/ui/views/main_menu.xml
@@ -8,11 +8,11 @@
 <body>
     <widget name="body">
         <widget name="contents">
-            <label name="title">Clangy Bird</label>
-            <label name="start" class="button num-1" onclick="GlobalEvent.emit('scene::push', 'game-scene')">Start</label>
-            <label name="settings" class="button num-2" onclick="GlobalEvent.emit('scene::push', 'settings-scene')">Settings</label>
-            <label name="tutorial" class="button num-3" onclick="GlobalEvent.emit('scene::push', 'tutorial-scene')">How to play</label>
-            <label name="exit" class="button num-4" onclick="GlobalEvent.emit('exit')">Exit</label>
+            <label name="title"/>
+            <label name="start" class="button num-1" onclick="GlobalEvent.emit('scene::push', 'game-scene')"/>
+            <label name="settings" class="button num-2" onclick="GlobalEvent.emit('scene::push', 'settings-scene')"/>
+            <label name="tutorial" class="button num-3" onclick="GlobalEvent.emit('scene::push', 'tutorial-scene')"/>
+            <label name="exit" class="button num-4" onclick="GlobalEvent.emit('exit')"/>
         </widget>
     </widget>
 </body>
